log
Tue 23 Apr 2024 12:47:36 PM UTC: 
 tests:  0|6
total_score: 0/70
b671868
Tue 23 Apr 2024 01:02:06 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
78e763c
Tue 23 Apr 2024 01:05:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
41f441d
Tue 23 Apr 2024 01:05:49 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
d087dbf
Tue 23 Apr 2024 01:27:11 PM UTC: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  0|0
762a277
Tue 23 Apr 2024 01:36:25 PM UTC: 
 hashmap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 20/70
9d25b66
Tue 23 Apr 2024 01:48:11 PM UTC: 
 hashmap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  0|0
7602ea1
Tue 23 Apr 2024 01:52:49 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
cd83148
Tue 23 Apr 2024 01:54:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
effe5b1
Tue 23 Apr 2024 01:57:48 PM UTC: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c:62:32: error: ‘key’ undeclared here (not in a function); did you mean ‘key_t’?
   62 |   Pair *nuevoDato = createPair(key, value);
      |                                ^~~
      |                                key_t
hashmap.c:62:37: error: ‘value’ undeclared here (not in a function)
   62 |   Pair *nuevoDato = createPair(key, value);
      |                                     ^~~~~
hashmap.c:63:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   63 |   map->buckets[pos] = nuevoDato;
      |      ^~
hashmap.c:66:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   66 |   map->size += 1;
      |      ^~
hashmap.c:67:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   67 |   map->current = pos;
      |      ^~
hashmap.c:68:1: error: expected identifier or ‘(’ before ‘}’ token
   68 | }
      | ^
Compilation failed
d4d8d34
Tue 23 Apr 2024 01:59:01 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:62:32: error: ‘key’ undeclared here (not in a function); did you mean ‘key_t’?
   62 |   Pair *nuevoDato = createPair(key, value);
      |                                ^~~
      |                                key_t
hashmap.c:62:37: error: ‘value’ undeclared here (not in a function)
   62 |   Pair *nuevoDato = createPair(key, value);
      |                                     ^~~~~
hashmap.c:63:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   63 |   map->buckets[pos] = nuevoDato;
      |      ^~
hashmap.c:66:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   66 |   map->size += 1;
      |      ^~
hashmap.c:67:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   67 |   map->current = pos;
      |      ^~
hashmap.c:68:1: error: expected identifier or ‘(’ before ‘}’ token
   68 | }
      | ^
Compilation failed
91580b2
Tue 23 Apr 2024 01:59:24 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|4
total_score: 30/70
656a098
Tue 23 Apr 2024 02:12:39 PM UTC: 
 hashmap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:107:51: error: expected ‘)’ before ‘return’
  107 |     else if (is_equal(map->buckets[pos]->key, key)
      |             ~                                     ^
      |                                                   )
  108 |       return map->buckets[pos];
      |       ~~~~~~                                       
hashmap.c:111:3: error: expected expression before ‘}’ token
  111 |   }
      |   ^
hashmap.c: At top level:
hashmap.c:116:3: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘-’ token
  116 | b - Si la clave no se encuentra avance hasta encontrarla (método de resolución de colisiones)
      |   ^
Compilation failed
48d8b86
Tue 23 Apr 2024 02:13:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:116:3: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘-’ token
  116 | b - Si la clave no se encuentra avance hasta encontrarla (método de resolución de colisiones)
      |   ^
Compilation failed
01f1453
Tue 23 Apr 2024 02:13:12 PM UTC: 
 hashmap.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  6|4
total_score: 30/70
0282130
Tue 23 Apr 2024 02:14:45 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|3
total_score: 40/70
0d244bf
Tue 23 Apr 2024 02:16:55 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
e401dfe
Tue 23 Apr 2024 02:28:45 PM UTC: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:96:9: error: variable ‘DatoEliminar’ set but not used [-Werror=unused-but-set-variable]
   96 |   Pair *DatoEliminar = searchMap(map, key);
      |         ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1780e40
Tue 23 Apr 2024 02:30:43 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
5f46c46
Tue 23 Apr 2024 02:32:48 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|2
total_score: 50/70
6f1c906
Tue 23 Apr 2024 02:33:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
2fda041
Tue 23 Apr 2024 02:34:30 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
ed920ae
